<resources>
    <string name="app_name">VisitEgypt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">Places</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="egypt_s_capital_with_egyption_museum_artifacts_plus_the_pyramids_of_giza_g_great_sphinx_monument">Egypt\'s capital with Egyption Museum artifacts, plus the Pyramids of Giza G Great Sphinx monument</string>
    <string name="price">price</string>
    <string name="home">Home</string>
    <string name="destinations">Destinations</string>
    <string name="things_to_do">Things to do</string>
    <string name="day_plans">Day Plans</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="about_us">About us</string>
    <string name="visit_egypt">Visit Egypt</string>
    <string name="pyramds">Pyramids</string>
    <string name="cityfragmentdesc1">The Egyptian pyramids are ancient pyramid-shaped masonry structures located in Egypt. As of November 2008, sources cite either 118 or 138 as the number of identified Egyptian pyramids</string>
    <string name="cityfragmentdesc2">The Al-Hussain Mosque is a mosque built in 1154 The mosque is located in Cairo, Egypt, near the Khan El-Khalili bazaar</string>
    <string name="cityfragmentdesc3">Its a good place for Relaxing</string>
    <string name="cityfragmentdesc4">The Mosque of Ibn Tulun is located in Cairo, Egypt. It is the oldest mosque in the city surviving in its original form, and is the largest mosque in Cairo in terms of land area.</string>
    <string name="hussain_mosque">Al-Hussain Mosque</string>
    <string name="azhar_park">Azhar park</string>
    <string name="tulun_mosque">Ibn Tulun Mosque</string>
    <string name="toast_cityfragment">This click Will move to an Activity that show more details about That City</string>
    <string name="alexandria">Alexandria</string>
    <string name="cairo">Cairo</string>
    <string name="ain_sokhna">Ain Sokhna</string>
    <string name="giza">Giza</string>
    <string name="aswan">Aswan</string>
    <string name="sharm">Sharm Elsheikh</string>
    <string name="luxor">Luxor</string>
    <string name="suez">Suez</string>
    <string name="toast_homefragment">This click Will move to an Activity that show more details about That City</string>
    <string name="alex_desc">Alexandria is a Mediterranean port city in Egypt. During the Hellenistic period, it was home to a lighthouse ranking among the Seven Wonders of the Ancient World as well as a storied library. Today the library is reincarnated in the disc-shaped, ultramodern Bibliotheca Alexandrina.</string>
    <string name="cairo_desc">Capital of Egypt  Cairo, Egypt’s sprawling capital, is set on the Nile River. At its heart is Tahrir Square and the vast Egyptian Museum</string>
    <string name="giza_desc">Giza is a year-round destination. A popular time to visit is Aug, the height of summer.</string>
    <string name="aswan_desc">Aswan, a city on the Nile River, has been southern Egypt’s strategic and commercial gateway since antiquity. It contains significant archaeological sites like the Philae temple complex, on Agilkia Island near the landmark Aswan Dam.</string>
    <string name="pharaohs_hotel">Pharaohs Hotel</string>
    <string name="steigenberger_hotel">Steigenberger Hotels</string>
    <string name="price_pharos">50 $ per night</string>
    <string name="price_steig">90 $ per night</string>
    <string name="hotel_desc">A great hotel in the middle of cairo</string>
    <string name="toast_hotelfragment">This click Will move to an Activity that show more details about This Hotel</string>
    <string name="zitouni">zitouni</string>
    <string name="zooba">Zooba</string>
    <string name="healthy">healthy</string>
    <string name="toast_restfragment">This click Will move to an Activity that show more details about This Resturant</string>
    <string name="rest_desc">\'Enjoy authentic Egyptian food at Zitouni restaurant, Four Seasons Hotel Cairo at Nile Plaza\'s 24-hour-a-day restaurant.\'</string>
    <string name="rest_desc2">Food Delivery Like Never Before. Order Your Favourite Food Here! Best Delivery Service. No More Calls. Cash on Delivery. Types: Burger, Pizza, Pasta, Sushi, Kebab, Indian, Thai, Mexican.</string>
    <string name="rest_desc3">Healthy uses the freshest Egyptian local produce to create simple and flavourful gourmet interpretations of Egyptian street food</string>
</resources>
