<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_destination"
            android:icon="@drawable/ic_action_place"
            android:title="@string/destinations" />
        <item
            android:id="@+id/nav_thingsToDo"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/things_to_do" />
        <item
            android:id="@+id/nav_day_plans"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/day_plans" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
